[gd_scene load_steps=75 format=2]

[ext_resource path="res://src/actors/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/walk/(10).png" type="Texture" id=2]
[ext_resource path="res://assets/player/hurt/armature_hurt_10.png" type="Texture" id=3]
[ext_resource path="res://assets/player/idle/(6).png" type="Texture" id=4]
[ext_resource path="res://assets/player/die/(5).png" type="Texture" id=5]
[ext_resource path="res://assets/player/die/(3).png" type="Texture" id=6]
[ext_resource path="res://assets/player/hurt/armature_hurt_17.png" type="Texture" id=7]
[ext_resource path="res://assets/player/attack/6.png" type="Texture" id=8]
[ext_resource path="res://assets/player/hurt/armature_hurt_09.png" type="Texture" id=9]
[ext_resource path="res://assets/player/walk/(4).png" type="Texture" id=10]
[ext_resource path="res://assets/player/idle/(2).png" type="Texture" id=11]
[ext_resource path="res://assets/player/hurt/armature_hurt_03.png" type="Texture" id=12]
[ext_resource path="res://assets/player/idle/(5).png" type="Texture" id=13]
[ext_resource path="res://assets/player/hurt/armature_hurt_02.png" type="Texture" id=14]
[ext_resource path="res://assets/player/jump/(5).png" type="Texture" id=15]
[ext_resource path="res://assets/player/walk/(6).png" type="Texture" id=16]
[ext_resource path="res://assets/player/walk/(2).png" type="Texture" id=17]
[ext_resource path="res://assets/player/jump/(10).png" type="Texture" id=18]
[ext_resource path="res://assets/player/walk/(3).png" type="Texture" id=19]
[ext_resource path="res://assets/player/hurt/armature_hurt_06.png" type="Texture" id=20]
[ext_resource path="res://assets/player/hurt/armature_hurt_16.png" type="Texture" id=21]
[ext_resource path="res://assets/player/die/(1).png" type="Texture" id=22]
[ext_resource path="res://assets/player/walk/(8).png" type="Texture" id=23]
[ext_resource path="res://assets/player/idle/(1).png" type="Texture" id=24]
[ext_resource path="res://assets/player/hurt/armature_hurt_04.png" type="Texture" id=25]
[ext_resource path="res://assets/player/hurt/armature_hurt_08.png" type="Texture" id=26]
[ext_resource path="res://assets/player/die/(8).png" type="Texture" id=27]
[ext_resource path="res://assets/player/die/(7).png" type="Texture" id=28]
[ext_resource path="res://assets/player/hurt/armature_hurt_01.png" type="Texture" id=29]
[ext_resource path="res://assets/player/die/(2).png" type="Texture" id=30]
[ext_resource path="res://assets/player/hurt/armature_hurt_12.png" type="Texture" id=31]
[ext_resource path="res://assets/player/hurt/armature_hurt_13.png" type="Texture" id=32]
[ext_resource path="res://assets/player/hurt/armature_hurt_14.png" type="Texture" id=33]
[ext_resource path="res://assets/player/idle/(3).png" type="Texture" id=34]
[ext_resource path="res://assets/player/hurt/armature_hurt_07.png" type="Texture" id=35]
[ext_resource path="res://assets/player/jump/(1).png" type="Texture" id=36]
[ext_resource path="res://assets/player/jump/(3).png" type="Texture" id=37]
[ext_resource path="res://assets/player/hurt/armature_hurt_00.png" type="Texture" id=38]
[ext_resource path="res://assets/player/jump/(4).png" type="Texture" id=39]
[ext_resource path="res://assets/player/hurt/armature_hurt_05.png" type="Texture" id=40]
[ext_resource path="res://assets/player/die/(4).png" type="Texture" id=41]
[ext_resource path="res://assets/player/attack/9.png" type="Texture" id=42]
[ext_resource path="res://assets/player/walk/(5).png" type="Texture" id=43]
[ext_resource path="res://assets/player/walk/(9).png" type="Texture" id=44]
[ext_resource path="res://assets/player/idle/(4).png" type="Texture" id=45]
[ext_resource path="res://assets/player/jump/(7).png" type="Texture" id=46]
[ext_resource path="res://assets/player/jump/(8).png" type="Texture" id=47]
[ext_resource path="res://assets/player/die/(10).png" type="Texture" id=48]
[ext_resource path="res://assets/player/hurt/armature_hurt_15.png" type="Texture" id=49]
[ext_resource path="res://assets/player/idle/(10).png" type="Texture" id=50]
[ext_resource path="res://assets/player/die/(9).png" type="Texture" id=51]
[ext_resource path="res://assets/player/walk/(1).png" type="Texture" id=52]
[ext_resource path="res://assets/player/idle/(7).png" type="Texture" id=53]
[ext_resource path="res://assets/player/walk/(7).png" type="Texture" id=54]
[ext_resource path="res://assets/player/hurt/armature_hurt_11.png" type="Texture" id=55]
[ext_resource path="res://assets/player/jump/(9).png" type="Texture" id=56]
[ext_resource path="res://assets/player/jump/(6).png" type="Texture" id=57]
[ext_resource path="res://assets/player/jump/(2).png" type="Texture" id=58]
[ext_resource path="res://assets/player/idle/(8).png" type="Texture" id=60]
[ext_resource path="res://assets/player/idle/(9).png" type="Texture" id=61]
[ext_resource path="res://assets/player/attack/10.png" type="Texture" id=62]
[ext_resource path="res://assets/player/attack/7.png" type="Texture" id=63]
[ext_resource path="res://assets/player/attack/1.png" type="Texture" id=64]
[ext_resource path="res://assets/player/attack/4.png" type="Texture" id=65]
[ext_resource path="res://assets/player/attack/8.png" type="Texture" id=66]
[ext_resource path="res://assets/player/attack/3.png" type="Texture" id=67]
[ext_resource path="res://assets/player/attack/2.png" type="Texture" id=68]
[ext_resource path="res://assets/player/attack/5.png" type="Texture" id=69]
[ext_resource path="res://src/actors/player/player_state_machine.gd" type="Script" id=70]
[ext_resource path="res://assets/fonts/PottaOne-Regular.ttf" type="DynamicFontData" id=71]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 11 ), ExtResource( 34 ), ExtResource( 45 ), ExtResource( 13 ), ExtResource( 4 ), ExtResource( 53 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 50 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 52 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 10 ), ExtResource( 43 ), ExtResource( 16 ), ExtResource( 54 ), ExtResource( 23 ), ExtResource( 44 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 29 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 25 ), ExtResource( 40 ), ExtResource( 20 ), ExtResource( 35 ), ExtResource( 26 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 55 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 49 ), ExtResource( 21 ), ExtResource( 7 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 30 ), ExtResource( 6 ), ExtResource( 41 ), ExtResource( 5 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 51 ), ExtResource( 48 ), ExtResource( 48 ), ExtResource( 48 ), ExtResource( 48 ), ExtResource( 48 ), ExtResource( 48 ), ExtResource( 48 ), ExtResource( 48 ), ExtResource( 48 ) ],
"loop": true,
"name": "dying",
"speed": 5.0
}, {
"frames": [ ExtResource( 64 ), ExtResource( 68 ), ExtResource( 67 ), ExtResource( 65 ), ExtResource( 69 ), ExtResource( 8 ), ExtResource( 63 ), ExtResource( 66 ), ExtResource( 42 ), ExtResource( 62 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 58 ), ExtResource( 37 ), ExtResource( 39 ), ExtResource( 15 ), ExtResource( 57 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 56 ), ExtResource( 18 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 164.672, 232.638 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 203.784, 185.574 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 71 )

[node name="player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -3 )
frames = SubResource( 1 )
animation = "idle"
frame = 3
speed_scale = 2.0
playing = true

[node name="right_body_collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -49.497, 65.0394 )
shape = SubResource( 2 )

[node name="left_body_collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 49.2519, 64.0395 )
shape = SubResource( 2 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
limit_left = 0
limit_top = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_right = 0.0

[node name="PlayerAttackArea" type="Area2D" parent="."]
modulate = Color( 0.996078, 0.996078, 0.996078, 1 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerAttackArea"]
position = Vector2( 207.607, 128.702 )
shape = SubResource( 3 )
disabled = true

[node name="WallRayCast" type="Node2D" parent="."]
visible = false

[node name="left" type="Node2D" parent="WallRayCast"]

[node name="RayCast2D" type="RayCast2D" parent="WallRayCast/left"]
enabled = true
cast_to = Vector2( -210, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="WallRayCast/left"]
position = Vector2( 0, 138.75 )
enabled = true
cast_to = Vector2( -210, 0 )

[node name="RayCast2D3" type="RayCast2D" parent="WallRayCast/left"]
position = Vector2( 0, 272.78 )
enabled = true
cast_to = Vector2( -210, 0 )

[node name="right" type="Node2D" parent="WallRayCast"]

[node name="RayCast2D" type="RayCast2D" parent="WallRayCast/right"]
enabled = true
cast_to = Vector2( 210, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="WallRayCast/right"]
position = Vector2( 0, 138.79 )
enabled = true
cast_to = Vector2( 210, 0 )

[node name="RayCast2D3" type="RayCast2D" parent="WallRayCast/right"]
position = Vector2( 0, 270.163 )
enabled = true
cast_to = Vector2( 210, 0 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.5
margin_top = -348.569
margin_right = 113.5
margin_bottom = -304.569
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "State : %s"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="state_machine" type="Node2D" parent="."]
script = ExtResource( 70 )
[connection signal="body_entered" from="PlayerAttackArea" to="." method="_on_PlayerAttackArea_body_entered"]
